unpackaged/main/default/objects/ETIN_Insurance__c/ETIN_Insurance__c.object-meta.xml
<CustomObject>
    <label>Insurance</label>
    <nameField>
        <displayFormat>ETIN-{000000}</displayFormat>
        <label>Insurance Ref Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurances</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>