unpackaged/main/default/objects/ETIN_Insurance__c/fields/Card_Download_URL__c.field-meta.xml
<CustomField>
    <fullName>Card_Download_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Card Download URL</label>
    <type>TextArea</type>
</CustomField>