unpackaged/main/default/objects/ETIN_Insurance__c/fields/Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Card_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Card Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>