unpackaged/main/default/objects/ETIN_Insurance__c/fields/Category_Number__c.field-meta.xml
<CustomField>
    <fullName>Category_Number__c</fullName>
    <defaultValue>&#39;DHA&#39;</defaultValue>
    <description>Created to maintain report as like business requested excel template</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Category Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>