unpackaged/main/default/objects/ETIN_Insurance__c/fields/City_Of_Work_Place__c.field-meta.xml
<CustomField>
    <fullName>City_Of_Work_Place__c</fullName>
    <formula>IF( ISBLANK( Employee_Family__c ),  EmployeeAcc__r.ETIN_Location__c , &#39;&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City Of Work Place</label>
    <type>Text</type>
</CustomField>