unpackaged/main/default/objects/ETIN_Insurance__c/fields/Client_Code__c.field-meta.xml
<CustomField>
    <fullName>Client_Code__c</fullName>
    <defaultValue>&#39;1723027&#39;</defaultValue>
    <description>Created to maintain report as like business requested excel template</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>