unpackaged/main/default/objects/ETIN_Insurance__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Renewal Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>