unpackaged/main/default/objects/ETIN_Insurance__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>Created to maintain report as like business requested excel template</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>