unpackaged/main/default/objects/ETIN_Insurance__c/fields/Country_Of_Residence__c.field-meta.xml
<CustomField>
    <fullName>Country_Of_Residence__c</fullName>
    <formula>&#39;UAE&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Of Residence</label>
    <type>Text</type>
</CustomField>