unpackaged/main/default/objects/ETIN_Insurance__c/fields/Created_Date_Custom__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Custom__c</fullName>
    <formula>DATEVALUE(CreatedDate  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date Custom</label>
    <type>Date</type>
</CustomField>