unpackaged/main/default/objects/ETIN_Insurance__c/fields/Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Document_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>