unpackaged/main/default/objects/ETIN_Insurance__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>