unpackaged/main/default/objects/ETIN_Insurance__c/fields/EID__c.field-meta.xml
<CustomField>
    <fullName>EID__c</fullName>
    <formula>If( ISBLANK( Employee_Family__c ),EmployeeAcc__r.ET_Emirates_Id__c, Employee_Family__r.Emirates_ID__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EID</label>
    <type>Text</type>
</CustomField>