unpackaged/main/default/objects/ETIN_Insurance__c/fields/Emirates_ID__c.field-meta.xml
<CustomField>
    <fullName>Emirates_ID__c</fullName>
    <formula>IF( ISBLANK( Employee_Family__c ), (EmployeeAcc__r.ET_Emirates_Id__c) , (Employee_Family__r.Emirates_ID__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Emirates ID</label>
    <type>Text</type>
</CustomField>