unpackaged/main/default/objects/ETIN_Insurance__c/fields/EmpApprovalPrcs__c.field-meta.xml
<CustomField>
    <fullName>EmpApprovalPrcs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EmpApprovalPrcs</label>
    <type>Checkbox</type>
</CustomField>