unpackaged/main/default/objects/ETIN_Insurance__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Insurance</relationshipLabel>
    <relationshipName>Insurance</relationshipName>
    <type>Lookup</type>
</CustomField>