unpackaged/main/default/objects/ETIN_Insurance__c/fields/Employee_DOB__c.field-meta.xml
<CustomField>
    <fullName>Employee_DOB__c</fullName>
    <formula>If( ISBLANK( Employee_Family__c),EmployeeAcc__r.PersonContact.Birthdate, Employee_Family__r.Date_Of_Birth__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DOB</label>
    <type>Date</type>
</CustomField>