unpackaged/main/default/objects/ETIN_Insurance__c/fields/Employee_Family__c.field-meta.xml
<CustomField>
    <fullName>Employee_Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Family</label>
    <referenceTo>ETIN_Employee_Family__c</referenceTo>
    <relationshipLabel>Insurances</relationshipLabel>
    <relationshipName>Insurances</relationshipName>
    <type>Lookup</type>
</CustomField>