unpackaged/main/default/objects/ETIN_Insurance__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <formula>EmployeeAcc__r.ETIN_Employee_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee ID</label>
    <type>Text</type>
</CustomField>