unpackaged/main/default/objects/ETIN_Insurance__c/fields/Employee_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Employee_Nationality__c</fullName>
    <formula>If( ISBLANK( Employee_Family__c ),EmployeeAcc__r.ETST_Nationality__c ,  Employee_Family__r.Nationality__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nationality</label>
    <type>Text</type>
</CustomField>