unpackaged/main/default/objects/ETIN_Insurance__c/fields/Employee_Status__c.field-meta.xml
<CustomField>
    <fullName>Employee_Status__c</fullName>
    <formula>Text(EmployeeAcc__r.ETIN_Employee_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Status</label>
    <type>Text</type>
</CustomField>