unpackaged/main/default/objects/ETIN_Insurance__c/fields/EmployeeAcc__c.field-meta.xml
<CustomField>
    <fullName>EmployeeAcc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurances</relationshipLabel>
    <relationshipName>Insurances</relationshipName>
    <type>Lookup</type>
</CustomField>