unpackaged/main/default/objects/ETIN_Insurance__c/fields/Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enrollment Date</label>
    <type>Date</type>
</CustomField>