unpackaged/main/default/objects/ETIN_Insurance__c/fields/ETIN_Bulk_Process__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Bulk_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bulk Process</label>
    <type>Checkbox</type>
</CustomField>