unpackaged/main/default/objects/ETIN_Insurance__c/fields/ETIN_Gender__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Gender__c</fullName>
    <formula>IF( ISBLANK( Employee_Family__c ), Text(EmployeeAcc__r.ETST_Gender__c) , Text(Employee_Family__r.Gender__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gender</label>
    <type>Text</type>
</CustomField>