unpackaged/main/default/objects/ETIN_Insurance__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <defaultValue>DATE(YEAR(TODAY()), 12, 31)</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>