unpackaged/main/default/objects/ETIN_Insurance__c/fields/File_Number__c.field-meta.xml
<CustomField>
    <fullName>File_Number__c</fullName>
    <formula>EmployeeAcc__r.ETIN_File_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Number</label>
    <type>Text</type>
</CustomField>