unpackaged/main/default/objects/ETIN_Insurance__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <formula>IF( ISBLANK( Employee_Family__c ), EmployeeAcc__r.FirstName , Employee_Family__r.First_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Name</label>
    <type>Text</type>
</CustomField>