unpackaged/main/default/objects/ETIN_Insurance__c/fields/Gross_Salary__c.field-meta.xml
<CustomField>
    <fullName>Gross_Salary__c</fullName>
    <label>Gross Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>