unpackaged/main/default/objects/ETIN_Insurance__c/fields/Ins_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Ins_External_Id__c</fullName>
    <description>Janardhan:this is copy value of Name - Autonumber, we are using this field as external id for bulk updates using CSV file
--&gt;ETIN_BulkAddResUploadCtrl</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>this is copy value of Name - Autonumber, we are using this field as external id for bulk updates</inlineHelpText>
    <label>Ins External Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>