unpackaged/main/default/objects/ETIN_Insurance__c/fields/Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance</relationshipLabel>
    <relationshipName>Insurance</relationshipName>
    <type>Lookup</type>
</CustomField>