unpackaged/main/default/objects/ETIN_Insurance__c/fields/Insurance_Company_Email__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insurance Company Email</label>
    <type>Email</type>
</CustomField>