unpackaged/main/default/objects/ETIN_Insurance__c/fields/Insurance_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company_Name__c</fullName>
    <formula>Insurance_Company__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Company Name</label>
    <type>Text</type>
</CustomField>