unpackaged/main/default/objects/ETIN_Insurance__c/fields/Labor_ID__c.field-meta.xml
<CustomField>
    <fullName>Labor_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Labor ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>