unpackaged/main/default/objects/ETIN_Insurance__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <formula>IF( ISBLANK( Employee_Family__c ),  EmployeeAcc__r.LastName ,  Employee_Family__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>