unpackaged/main/default/objects/ETIN_Insurance__c/fields/Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>Marital_Status__c</fullName>
    <formula>IF( ISBLANK( Employee_Family__c ),IF( ISPICKVAL( EmployeeAcc__r.ETIN_Marital_Status__c , &#39;Single&#39;) , &#39;S&#39;,  IF(ISPICKVAL(EmployeeAcc__r.ETIN_Marital_Status__c, &#39;Married&#39;), &#39;M&#39;, &#39;&#39;) ),&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marital Status</label>
    <type>Text</type>
</CustomField>