unpackaged/main/default/objects/ETIN_Insurance__c/fields/Member_External_Reference__c.field-meta.xml
<CustomField>
    <fullName>Member_External_Reference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Member External Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>