unpackaged/main/default/objects/ETIN_Insurance__c/fields/Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Name__c</fullName>
    <formula>if( ISBLANK(  Employee_Family__c ), EmployeeAcc__r.FirstName+&#39; &#39;+EmployeeAcc__r.MiddleName+&#39; &#39;+EmployeeAcc__r.LastName, Employee_Family__r.First_Name__c+&#39; &#39;+ Employee_Family__r.Middle_Name__c +&#39; &#39;+Employee_Family__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>