unpackaged/main/default/objects/ETIN_Insurance__c/fields/Member_Number__c.field-meta.xml
<CustomField>
    <fullName>Member_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Card number for existing member only-optional</inlineHelpText>
    <label>Member Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>