unpackaged/main/default/objects/ETIN_Insurance__c/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <formula>IF( ISBLANK( Employee_Family__c ),   EmployeeAcc__r.MiddleName ,  Employee_Family__r.Middle_Name__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Middle Name</label>
    <type>Text</type>
</CustomField>