unpackaged/main/default/objects/ETIN_Insurance__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <formula>EmployeeAcc__r.PersonContact.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile Number</label>
    <type>Text</type>
</CustomField>