unpackaged/main/default/objects/ETIN_Insurance__c/fields/National_Id_Type__c.field-meta.xml
<CustomField>
    <fullName>National_Id_Type__c</fullName>
    <label>National Id Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UID No.</fullName>
            </value>
            <value>
                <fullName>Emirates ID</fullName>
                <default>true</default>
                <label>Emirates ID</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>