unpackaged/main/default/objects/ETIN_Insurance__c/fields/Old_Package_Name__c.field-meta.xml
<CustomField>
    <fullName>Old_Package_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Old Package Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>