unpackaged/main/default/objects/ETIN_Insurance__c/fields/Picture_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Picture_File_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Picture File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>