unpackaged/main/default/objects/ETIN_Insurance__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <label>Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Enhanced</fullName>
            </value>
            <value>
                <fullName>Core Silver</fullName>
            </value>
            <value>
                <fullName>Secure Silver</fullName>
            </value>
            <value>
                <fullName>Select Bronze</fullName>
            </value>
            <value>
                <fullName>Enhanced Bronze</fullName>
            </value>
            <value>
                <fullName>Enhanced silver</fullName>
            </value>
            <value>
                <fullName>Select Silver</fullName>
            </value>
            <value>
                <fullName>Core Bronze</fullName>
            </value>
            <value>
                <fullName>CAT 1</fullName>
            </value>
            <value>
                <fullName>CAT 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>