unpackaged/main/default/objects/ETIN_Insurance__c/fields/Previous_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Previous_Insurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Insurance</label>
    <referenceTo>ETIN_Insurance__c</referenceTo>
    <relationshipLabel>Insurance</relationshipLabel>
    <relationshipName>Insurance</relationshipName>
    <type>Lookup</type>
</CustomField>