unpackaged/main/default/objects/ETIN_Insurance__c/fields/Previous_Insurance_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Previous_Insurance_Coverage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Mandatory for EBP  only (to ensure continuity of coverage)</inlineHelpText>
    <label>Previous Insurance Coverage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>