unpackaged/main/default/objects/ETIN_Insurance__c/fields/Principal_Reference__c.field-meta.xml
<CustomField>
    <fullName>Principal_Reference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please fill the card number of the Principal (for adding dependents )</inlineHelpText>
    <label>Principal Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>