unpackaged/main/default/objects/ETIN_Insurance__c/fields/Relation__c.field-meta.xml
<CustomField>
    <fullName>Relation__c</fullName>
    <formula>if(ISBLANK( Employee_Family__c ),&#39;Principal&#39;, text(Employee_Family__r.Relation__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relation</label>
    <type>Text</type>
</CustomField>