unpackaged/main/default/objects/ETIN_Insurance__c/fields/Renew_Request__c.field-meta.xml
<CustomField>
    <fullName>Renew_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewal Request?</label>
    <type>Checkbox</type>
</CustomField>