unpackaged/main/default/objects/ETIN_Insurance__c/fields/Renew_Status__c.field-meta.xml
<CustomField>
    <fullName>Renew_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renew Status</label>
    <type>Checkbox</type>
</CustomField>