unpackaged/main/default/objects/ETIN_Insurance__c/fields/Residence_Location__c.field-meta.xml
<CustomField>
    <fullName>Residence_Location__c</fullName>
    <formula>IF( ISBLANK( Employee_Family__c ),  EmployeeAcc__r.ETIN_Location__c , &#39;&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Residence Location</label>
    <type>Text</type>
</CustomField>