unpackaged/main/default/objects/ETIN_Insurance__c/fields/Salary_Band__c.field-meta.xml
<CustomField>
    <fullName>Salary_Band__c</fullName>
    <formula>IF( ISBLANK( Employee_Family__c ), Text( EmployeeAcc__r.ETIN_Salary_Band__c ) , &#39;Dependents No salary&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salary Band</label>
    <type>Text</type>
</CustomField>