unpackaged/main/default/objects/ETIN_Insurance__c/fields/Send_to_Partner__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent to Partner</label>
    <type>Checkbox</type>
</CustomField>