unpackaged/main/default/objects/ETIN_Insurance__c/fields/Sponsor_UID__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_UID__c</fullName>
    <formula>IF( ISBLANK( Employee_Family__c ),  EmployeeAcc__r.ETIN_Sponsor_UID__c  , &#39;&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sponsor UID</label>
    <type>Text</type>
</CustomField>