unpackaged/main/default/objects/ETIN_Insurance__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Pending with HR Manager</fullName>
            </value>
            <value>
                <fullName>Under Process</fullName>
            </value>
            <value>
                <fullName>Under Approval</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Pending with Zone Coordinator</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
            <value>
                <fullName>Under Investigation</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Admin Approval Pending</fullName>
                <isActive>false</isActive>
                <label>Admin Approval Pending</label>
            </value>
            <value>
                <fullName>Admin Approved</fullName>
                <isActive>false</isActive>
                <label>Admin Approved</label>
            </value>
            <value>
                <fullName>Admin Rejected</fullName>
                <isActive>false</isActive>
                <label>Admin Rejected</label>
            </value>
            <value>
                <fullName>HR Rejected</fullName>
                <isActive>false</isActive>
                <label>HR Rejected</label>
            </value>
            <value>
                <fullName>Insurance Approved</fullName>
                <isActive>false</isActive>
                <label>Insurance Approved</label>
            </value>
            <value>
                <fullName>Insurance Pending</fullName>
                <isActive>false</isActive>
                <label>Insurance Pending</label>
            </value>
            <value>
                <fullName>Insurance Rejected</fullName>
                <isActive>false</isActive>
                <label>Insurance Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>