unpackaged/main/default/objects/ETIN_Insurance__c/fields/Sub_Client_Code__c.field-meta.xml
<CustomField>
    <fullName>Sub_Client_Code__c</fullName>
    <description>Created to maintain report as like business requested excel template</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sub Client Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>