unpackaged/main/default/objects/ETIN_Insurance__c/fields/Visa_Emirates__c.field-meta.xml
<CustomField>
    <fullName>Visa_Emirates__c</fullName>
    <formula>If( ISBLANK( Employee_Family__c ),Text( EmployeeAcc__r.ETIN_Place_of_Visa_Issuance__c),  Text(Employee_Family__r.Place_of_Visa_Issuance__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Place of Visa Issuance</label>
    <type>Text</type>
</CustomField>