unpackaged/main/default/objects/ETIN_Insurance__c/fields/Visible_to_Admin__c.field-meta.xml
<CustomField>
    <fullName>Visible_to_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible to Admin Only</label>
    <type>Checkbox</type>
</CustomField>