unpackaged/main/default/objects/ETIN_Insurance__c/fields/Work_Emirates__c.field-meta.xml
<CustomField>
    <fullName>Work_Emirates__c</fullName>
    <formula>TEXT(  EmployeeAcc__r.ETIN_Work_Emirates__c   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Emirates</label>
    <type>Text</type>
</CustomField>