unpackaged/main/default/objects/ETIN_Insurance__c/fields/Work_Location__c.field-meta.xml
<CustomField>
    <fullName>Work_Location__c</fullName>
    <formula>TEXT( EmployeeAcc__r.ETIN_Work_Emirates__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Location</label>
    <type>Text</type>
</CustomField>