unpackaged/main/default/objects/ETIN_Insurance__c/recordTypes/ETIN_Health_Insurance_In_progress.recordType-meta.xml
<RecordType>
    <fullName>ETIN_Health_Insurance_In_progress</fullName>
    <active>true</active>
    <label>Health Insurance In progress</label>
</RecordType>