unpackaged/main/default/objects/ETIN_Insurance__c/validationRules/CheckCardNumberPolicyB4Active.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckCardNumberPolicyB4Active</fullName>
    <active>true</active>
    <errorConditionFormula>(ISBLANK(Card_Number__c)|| ISBLANK( Expiry_Date__c ) ) &amp;&amp;  
ISPICKVAL(Insurance_Current_Status__c,&#39;Active&#39;)</errorConditionFormula>
    <errorMessage>Please fill Card number before insurance status to active</errorMessage>
</ValidationRule>