unpackaged/main/default/objects/ETIN_Insurance__c/validationRules/Effective_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_Date_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>ISNEW() &amp;&amp;   Effective_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Effective_Date__c</errorDisplayField>
    <errorMessage>Please enter valid Effective Date</errorMessage>
</ValidationRule>