unpackaged/main/default/objects/ETIN_Insurance__c/validationRules/Employee_Termination.validationRule-meta.xml
<ValidationRule>
    <fullName>Employee_Termination</fullName>
    <active>true</active>
    <description>If employee termination info available then dont allow to add Insurance</description>
    <errorConditionFormula>NOT(ISBLANK( EmployeeAcc__r.ETIN_Termination_Date__c ))</errorConditionFormula>
    <errorMessage>You cannot create Insurance, the employee is Terminated</errorMessage>
</ValidationRule>