unpackaged/main/default/objects/ETIN_Insurance__c/validationRules/Enrollment_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Enrollment_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp;  Enrollment_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Enrollment_Date__c</errorDisplayField>
    <errorMessage>Please enter valid Enrollment Date</errorMessage>
</ValidationRule>