unpackaged/main/default/objects/ETIN_Insurance__c/validationRules/ETIN_Date_of_Birth_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ETIN_Date_of_Birth_validation</fullName>
    <active>false</active>
    <errorConditionFormula>True</errorConditionFormula>
    <errorMessage>Please enter valid Date of Birth</errorMessage>
</ValidationRule>