unpackaged/main/default/objects/ETIN_Insurance__c/validationRules/Expiry_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Expiry_Date</fullName>
    <active>true</active>
    <errorConditionFormula>(ISNEW() &amp;&amp;  Expiry_Date__c &lt; TODAY()) || Expiry_Date__c  &lt;= Effective_Date__c || Expiry_Date__c  &lt;=  Enrollment_Date__c</errorConditionFormula>
    <errorDisplayField>Expiry_Date__c</errorDisplayField>
    <errorMessage>Please enter valid Expiry Date</errorMessage>
</ValidationRule>