unpackaged/main/default/objects/ETIN_Insurance__c/validationRules/Insurance_is_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Insurance_is_Active</fullName>
    <active>true</active>
    <description>Insurance is active, coordinator cannot make any changes</description>
    <errorConditionFormula>AND
(
$Profile.Name == &quot;ETIN_HealthInsuranceCord(Platform)&quot;,
TEXT( Insurance_Current_Status__c ) = &quot;Active&quot;
)</errorConditionFormula>
    <errorMessage>You don&#39;t have rights to change. Please check with insurance admin.</errorMessage>
</ValidationRule>