unpackaged/main/default/objects/ETIN_Insurance__c/validationRules/Insurance_Plan_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Insurance_Plan_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(OR(
       ISPICKVAL(Plan__c , &#39;Basic&#39;),
       ISPICKVAL(Plan__c , &#39;Enhanced&#39;)
    )),
    NOT(OR(
        $Profile.Name = &quot;ETIN_HealthInsuranceAdmin(Platform)&quot;,
        $Profile.Name = &quot;ETIN_HealthInsuranceCord(Platform)&quot;,
        $Profile.Name = &quot;System Administrator&quot;
    ))
)</errorConditionFormula>
    <errorDisplayField>Plan__c</errorDisplayField>
    <errorMessage>You don&#39;t have permission to choose the Plan</errorMessage>
</ValidationRule>