unpackaged/main/default/objects/ETIN_Insurance__c/validationRules/Insurance_Policy_Number_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Insurance_Policy_Number_validation</fullName>
    <active>false</active>
    <description>Allows only text and Numbers and  -</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(Insurance_Policy_Number__c)),
NOT(REGEX( Insurance_Policy_Number__c, &quot;^[0-9A-Za-z-]+$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Insurance_Policy_Number__c</errorDisplayField>
    <errorMessage>Please enter valid characters</errorMessage>
</ValidationRule>