unpackaged/main/default/objects/ETIN_Insurance__c/validationRules/InsuranceActive_statusShouldCompleted.validationRule-meta.xml
<ValidationRule>
    <fullName>InsuranceActive_statusShouldCompleted</fullName>
    <active>true</active>
    <description>If we make insurance status is active then request status should be completed</description>
    <errorConditionFormula>ISPICKVAL(Insurance_Current_Status__c  , &#39;Active&#39;) &amp;&amp;  NOT(ISPICKVAL(Status__c  , &#39;Completed&#39;) )</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Request status should be completed</errorMessage>
</ValidationRule>