unpackaged/main/default/objects/ETIN_Insurance__c/validationRules/Member_Cancellation_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Member_Cancellation_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Member_Cancellation_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Member_Cancellation_Date__c</errorDisplayField>
    <errorMessage>Please enter valid Cancellation Date</errorMessage>
</ValidationRule>