unpackaged/main/default/objects/ETIN_Insurance__c/validationRules/Member_Number_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Member_Number_validation</fullName>
    <active>true</active>
    <description>Allows only text and Numbers and  -</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(Member_Number__c )),
NOT(REGEX( Member_Number__c , &quot;^[0-9A-Za-z-]+$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Member_Number__c</errorDisplayField>
    <errorMessage>Please enter valid characters</errorMessage>
</ValidationRule>